# django_improve_form

./: .coveragerc  .gitignore  Pipfile  README.md  README.rst  boot_django.py  load_tests.py  requirements.txt  setup.cfg
django_improve_form/: admin.py  apps.py  forms.py  mixins.py  notes.md  urls.py  views.py
django_improve_form/templates/django_registration/: activate.html  activation_complete.html  activation_failed.html  registration_closed.html  registration_complete.html  registration_form.html
django_improve_form/templates/generic/: base.html  home.html
django_improve_form/templates/improve_form/: base_form.html  logged_out.html  login.html  signup.html  update.html
django_improve_form/tests/: helper_admin.py  helper_general.py  helper_models.py  helper_views.py  mixin_forms.py  test_client.py  test_commands.py  test_mixins.py  tests.py  urls_activation.py  urls_simple.py
